Fixed Icon list content overlapping outside div issue

--- a/src/blocks/icon-list-child/style.scss
+++ b/src/blocks/icon-list-child/style.scss
@@ -13,3 +13,7 @@
 img.uagb-icon-list__source-image {
 	max-width: unset;
 }
+
+.wp-block-uagb-icon-list-child .uagb-icon-list__label {
+	word-break: break-all;
+}
